maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:29: error: type mismatch;
 found   : Unit
 required: Array[Int]
  for (i <- 1 to hauteurMonde) {
         ^JediEscaper:51: error: missing arguments for method aMurNord in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurNord) {
       ^JediEscaper:56: error: missing arguments for method aMurOuest in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (!aMurOuest) {
       ^